--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -4,7 +4,7 @@ layout: default
 <div class="post">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-description">{{ page.description }}</p>
+    <h3 class="post-description">{{ page.description }}</h3>
   </header>
 
   <article>
